# practice2_Zandakov_8B42

./: .gitignore  CMakeLists.txt
GameCore/: CMakeLists.txt  Game_logic.cpp  Game_logic.h  game_logic.cpp  game_logic.h
GameUI/: CMakeLists.txt  CMakeLists.txt.autosave  game.cpp  game.h  game.ui  game.ui.autosave  gamemenu.cpp  gamemenu.h  gamemenu.ui  lobby.cpp  lobby.cpp.autosave  lobby.h  lobby.ui  main.cpp  mainmenu.cpp  mainmenu.h  mainmenu.ui  mainmenu.ui.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settings.ui  settings.ui.autosave
